<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".writefeels">

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/feel_ing"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="65dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/comment"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/comment_list"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="161dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="111dp"
        android:layout_height="43dp"
        android:layout_marginBottom="89dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="76dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/surprise"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button6"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="7dp"
        android:text="@string/anger"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button7"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/joy"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/fear"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="5dp"
        android:text="@string/sadness"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/love"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</android.support.constraint.ConstraintLayout>